--- a/GestionScolaireAngular/src/app/components/institution-components/institution-list/institution-list.component.html
+++ b/GestionScolaireAngular/src/app/components/institution-components/institution-list/institution-list.component.html
@@ -1,1 +1,6 @@
-<p>institution-list works!</p>
+<h1>
+  Liste des établissements :
+</h1>
+<div>
+  <app-institution *ngFor="let n of institutions" [institution]=n></app-institution>
+</div>
