--- a/GestionScolaireAngular/src/app/components/menu/menu.component.html
+++ b/GestionScolaireAngular/src/app/components/menu/menu.component.html
@@ -1,1 +1,4 @@
-<p>menu works!</p>
+<ul>
+  <li><a routerLink="home">Home </a></li>
+  <li><a routerLink="institution">Liste des institutions</a></li>
+</ul>
