--- a/GestionScolaireAngular/src/app/components/teacher-components/teacher-list/teacher-list.component.html
+++ b/GestionScolaireAngular/src/app/components/teacher-components/teacher-list/teacher-list.component.html
@@ -1,1 +1,74 @@
-<p>teacher-list works!</p>
+<h1>Liste des professeur</h1>
+
+<div class="container-fluid">
+
+  <p ><app-teacher  *ngFor="let teacher of teachers" [teacher]="teacher"> </app-teacher></p>
+  <div class="float-xxl-end"><button class="btn btn-outline-primary" (click)="open(content)">Ajouter un professeur</button></div>
+
+</div>
+
+
+
+
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Ajouter un professeur!</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
+  </div>
+  <div class="container-fluid">
+
+    <ul *ngIf="formsubmitted">
+      <li *ngIf="ourForm.controls['institutionId'].errors?.['required']">L'Id de l'établissement est obligatoire</li>
+      <li *ngIf="ourForm.controls['firstName'].errors?.['required']">Le champ nom est obligatoire</li>
+      <li *ngIf="ourForm.controls['lastName'].errors?.['required']">Le champ prénom est obligatoire</li>
+      <li *ngIf="ourForm.controls['subject'].errors?.['required']">Le champ matière enseignée est obligatoire</li>
+      <li *ngIf="ourForm.controls['birthDate'].errors?.['required']">La date de naissance est obligatoire</li>
+    </ul>
+
+    <form  [formGroup]="ourForm" (ngSubmit)="c(submitForm())" >
+      <div class="mb-3">
+        <label for="firstName" class="form-label">Prénom</label>
+        <input type="text" class="form-control" id="firstName" formControlName="firstName">
+      </div>
+      <div class="mb-3">
+        <label for="lastName" class="form-label">Nom</label>
+        <input type="text" class="form-control" id="lastName" formControlName="lastName">
+      </div>
+      <div class="mb-3">
+        <label for="birthDate" class="form-label">Date de naissance :</label>
+        <input type="text" class="form-control" id="birthDate" formControlName="birthDate">
+      </div>
+      <div formGroupName="subjects">
+        <label for="subjectId" class="form-label">Matière(s) :</label>
+        <select  id="subjectId" class="form-control" formControlName="subjectId">
+          <option  *ngFor="let sub of subjects" [value]=sub.id>{{sub.name}}</option>
+        </select>
+      </div>
+      <div formGroupName="groupClasses">
+        <label for="groupClassId" class="form-label">Classe :</label>
+        <select  id="groupClassId" class="form-control" formControlName="groupClassId">
+          <option  *ngFor="let grp of groupClasses" [value]=grp.id>{{grp.name}}</option>
+        </select>
+      </div>
+      <div formGroupName="institution">
+        <label for="institutionId" class="form-label">Etablissement :</label>
+        <select  id="institutionId" class="form-control" formControlName="institutionId">
+          <option  *ngFor="let ins of institutions" [value]=ins.id>{{ins.name}}</option>
+        </select>
+      </div>
+
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-outline-dark">Enregistrer</button>
+      </div>
+    </form>
+    <pre>
+      {{ourForm.value | json}}
+    </pre>
+    Form status: {{ourForm.valid | json}}
+  </div>
+</ng-template>
+
+
+
+
+
