Modifying some url
The detail is working

--- a/GestionScolaireAngular/src/app/components/teacher-components/teacher-detail/teacher-detail.component.html
+++ b/GestionScolaireAngular/src/app/components/teacher-components/teacher-detail/teacher-detail.component.html
@@ -7,6 +7,8 @@
         <p class="card-text">Matière: {{teacher.subjects}}</p>
         <p class="card-text">Date de naissance: {{teacher.birthDate}}</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
+        <br><br><br>
+        <button (click)=deleteTeacher()>Delete</button>
       </div>
     </div>
   </div>
