--- a/GestionScolaireAngular/src/app/components/teacher-components/teacher/teacher.component.html
+++ b/GestionScolaireAngular/src/app/components/teacher-components/teacher/teacher.component.html
@@ -1,4 +1,4 @@
-<span [routerLink]="['/teacher/', teacher.id]">
+<span [routerLink]="['/teacher', teacher.id]">
 <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
   <div class="card-header">{{teacher.firstName}}</div>
   <div class="card-body">
