--- a/GestionScolaireAngular/src/app/components/subject-components/subject/subject.component.html
+++ b/GestionScolaireAngular/src/app/components/subject-components/subject/subject.component.html
@@ -1,8 +1,8 @@
-<span [routerLink]="['/subject/', subject.id]">
+<span [routerLink]="['/subject', subject.id]">
 <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
   <div class="card-header">{{subject.name}}</div>
   <div class="card-body">
-    <h5 class="severity">Matière(s) enseignée(s) : {{subject.color}}</h5>
+    <h5 class="severity">Nom de la matière : {{subject.name}}</h5>
   </div>
 </div>
 </span>
