--- a/GestionScolaireAngular/src/app/components/institution-components/institution-list/institution-list.component.html
+++ b/GestionScolaireAngular/src/app/components/institution-components/institution-list/institution-list.component.html
@@ -1,6 +1,8 @@
-<h1>
-  Liste des établissements :
-</h1>
+<!-- Institution Section -->
+<div class="w3-container w3-padding-32" id="institution">
+  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Choisissez votre établissement :</h3>
+</div>
+<br><br>
 <div>
   <app-institution *ngFor="let n of institutions" [institution]=n></app-institution>
 </div>
