--- a/GestionScolaireAngular/src/app/components/teacher-components/teacher-detail/teacher-detail.component.html
+++ b/GestionScolaireAngular/src/app/components/teacher-components/teacher-detail/teacher-detail.component.html
@@ -6,7 +6,7 @@
         <h5 class="card-title">Teacher: {{teacher.firstName}}  {{teacher.firstName}}</h5>
         <p class="card-text">Matière: {{teacher.subjects}}</p>
         <p class="card-text">Date de naissance: {{teacher.birthDate}}</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="#" class="btn btn-primary">Retour à l'accueil</a>
         <br><br><br>
         <button (click)=deleteTeacher()>Delete</button>
       </div>
