--- a/GestionScolaireAngular/src/app/components/home/home.component.html
+++ b/GestionScolaireAngular/src/app/components/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>W3.CSS Template</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+</head>
+<body>
+
+<h2>Bienvenue sur NEFR</h2>
+<!-- About Section -->
+<div class="w3-container w3-padding-32" id="about">
+  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">A propos :</h3>
+  <p>Ce site, fondé en 2023 par Sébastien, Johann et Kevin, vous permettra de gérer
+    votre établissement scolaire en rendant accessible l'ajout de matière, professeurs etc ...
+  J'espère qu'il vous plaira.
+</div>
