--- a/GestionScolaireAngular/src/app/components/menu/menu.component.html
+++ b/GestionScolaireAngular/src/app/components/menu/menu.component.html
@@ -1,4 +1,5 @@
 <ul>
-  <li><a routerLink="home">Home </a></li>
-  <li><a routerLink="institution">Liste des institutions</a></li>
+  <div class="w3-right w3-hide-small">
+    <a routerLink="institution">Liste des établissements</a>
+  </div>
 </ul>
