--- a/GestionScolaireAngular/src/styles.css
+++ b/GestionScolaireAngular/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+*{ margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+
+}
+
+body {
+  max-width: 1000px;
+  margin: 5em auto;
+  padding: 0px;
+  border-radius: 1em;
+}
