--- a/GestionScolaireAngular/src/app/components/subject-components/subject-detail/subject-detail.component.html
+++ b/GestionScolaireAngular/src/app/components/subject-components/subject-detail/subject-detail.component.html
@@ -4,6 +4,8 @@
       <div class="card-body">
         <h5 class="card-title">Nom de matière : {{subject.name}}</h5>
         <p class="card-text">Couleur associée : {{subject.color}}</p>
+        <br><br><br>
+        <button (click)=deleteSubject()>Supprimer</button>
       </div>
     </div>
   </div>
