--- a/GestionScolaireAngular/src/app/components/teacher-components/teacher-detail/teacher-detail.component.html
+++ b/GestionScolaireAngular/src/app/components/teacher-components/teacher-detail/teacher-detail.component.html
@@ -8,7 +8,7 @@
         <p class="card-text">Date de naissance: {{teacher.birthDate}}</p>
         <a href="#" class="btn btn-primary">Retour à l'accueil</a>
         <br><br><br>
-        <button (click)=deleteTeacher()>Delete</button>
+        <button (click)=deleteTeacher()>Supprimer</button>
       </div>
     </div>
   </div>
