--- a/GestionScolaireAngular/src/app/components/classroom-components/classroom/classroom.component.html
+++ b/GestionScolaireAngular/src/app/components/classroom-components/classroom/classroom.component.html
@@ -1,1 +1,8 @@
-<p>classroom works!</p>
+<span [routerLink]="['/classroom', classroom.id]">
+<div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+  <div class="card-header">{{classroom.name}}</div>
+  <div class="card-body">
+    <h5 class="capacity" >Capacité d'accueil : {{classroom.capacity}}</h5>
+  </div>
+</div>
+</span>
