--- a/GestionScolaireAngular/src/app/components/teacher-components/teacher-detail/teacher-detail.component.html
+++ b/GestionScolaireAngular/src/app/components/teacher-components/teacher-detail/teacher-detail.component.html
@@ -3,8 +3,10 @@
     <div class="card">
       <div class="card-body">
         <img src="https://64.media.tumblr.com/d76e7c44f367cf1a06d6b45b47c9111a/tumblr_pmrmln17xI1solxeko1_1280.jpg" class="card-img" alt="JD">
-        <h5 class="card-title">Teacher: {{teacher.firstName}}  {{teacher.firstName}}</h5>
-        <p class="card-text">Matière: {{teacher.subjects}}</p>
+        <h5 class="card-title">Teacher: {{teacher.lastName}}  {{teacher.firstName}}</h5>
+        <h5 class="severity" >Matière(s) enseignée(s) :</h5>
+        <p class="severity" *ngFor="let sub of teacher.subjects">{{sub.name}}</p>
+        <br>
         <p class="card-text">Date de naissance: {{teacher.birthDate}}</p>
         <a href="#" class="btn btn-primary">Retour à l'accueil</a>
         <br><br><br>
