--- a/GestionScolaireAngular/src/app/components/schedule/schedule.component.html
+++ b/GestionScolaireAngular/src/app/components/schedule/schedule.component.html
@@ -3,15 +3,78 @@
 
 
   <div class='demo-app-main'>
-    <full-calendar *ngIf='calendarVisible' [options]='calendarOptions' id="calendar">
+    <full-calendar *ngIf='calendarVisible' [options]='calendarOptions' (click)="open(content)"  id="calendar">
 <!--      <ng-template #eventContent let-arg>-->
 <!--        <b>{{ arg.timeText }}</b>-->
 <!--        <i>{{ arg.event.title }}</i>-->
 <!--      </ng-template>-->
+
+
     </full-calendar>
     <div>
       <button (click)="generatePdf()">Generate PDF</button>
     </div>
   </div>
 
+
 </div>
+
+
+//Modal
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">Selection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <!--formulaire -->
+
+
+    <form  [formGroup]="ourForm" (ngSubmit)="(submitForm())" >
+      <ul>
+        <li> Jour:  {{ startDay }}  </li>
+        <li> Debut:  {{ startTime | date: 'h:mm a' }}</li>
+        <li> Fin: {{ endTime | date: 'h:mm a' }}</li>
+
+      </ul>
+      <div formGroupName="teacher">
+        <label for="teacherId" class="form-label">Professeur :</label>
+        <select  id="teacherId" class="form-control" formControlName="id">
+          <option  *ngFor="let teacher of teachers" [value]=teacher.id>{{teacher.lastName}} {{teacher.firstName}}</option>
+        </select>
+      </div>
+      <div formGroupName="subject">
+        <label for="subjectId" class="form-label">Matière(s) :</label>
+        <select  id="subjectId" class="form-control" formControlName="id">
+          <option  *ngFor="let sub of subjects" [value]=sub.id>{{sub.name}}</option>
+        </select>
+      </div>
+      <div formGroupName="room">
+        <label for="classId" class="form-label">Salle de classe :</label>
+        <select  id="classId" class="form-control" formControlName="id">
+          <option  *ngFor="let room of classrooms" [value]=room.id>{{room.name}}</option>
+        </select>
+      </div>
+    </form>
+
+
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cancel click')">Annuler</button>
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Sauvegarder</button>
+
+  </div>
+
+</ng-template>
+
+
+
+
+
+
+
+
+
